fix control panel covering graph

--- a/styles.css
+++ b/styles.css
@@ -636,7 +636,7 @@ color: red;
     position: fixed;
     top: 2%;
     right: 0%;
-    width: 5%;
+    width: 2%;
     height: 96%;
     border-top-left-radius: 1rem;
     border-bottom-left-radius: 1rem;
